@@ -1,5 +1,6 @@
-2019-03-26 Jan Kotanski <jan.kotanski@desy.de>
-	* add DetectorROIsParams attribute and sardan env variable
+2019-03-27 Jan Kotanski <jan.kotanski@desy.de>
+	* add DetectorROIsParams attribute and sardana env variable
+	* make hidra server combobox editable
 	* tagged as 2.4.0
 
 2019-03-21 Jan Kotanski <jan.kotanski@desy.de>
